samples/_failures_safe/1761546978_3fd727_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b088f21d.c: In function ‘scan_string’:
./samples/SAFE/__tmp_b088f21d.c:153:5: error: expected expression at end of input
  153 |     if (lexer->input[lexer->position] !=
      |     ^~
./samples/SAFE/__tmp_b088f21d.c:153:5: error: expected declaration or statement at end of input
